Add the pygments style for DocTest theme.

--- a/old-doctest/theme.conf
+++ b/old-doctest/theme.conf
@@ -2,6 +2,7 @@
 inherit = sphinxdoc
 stylesheet = style.css
 nosidebar = true
+pygments_style = pygments_style.DocTestStyle
 
 [options]
 bodyfont = sans-serif
