--- a/jdoctest/theme.conf
+++ b/jdoctest/theme.conf
@@ -1,12 +1,7 @@
 [theme]
-inherit = basic
-stylesheet = jdoctest.css
-nosidebar = true
-pygments_style = pygments_style.jDoctestStyle
+inherit = subleebase
+pygments_style = subleestyles.jDoctestStyle
 
 [options]
-index_logo =
-index_logo_alt =
-index_logo_height = 120px
-github_fork =
-
+show_toc = true
+github_ribbon = _static/fork_jdoctest.png
