--- a/korean/theme.conf
+++ b/korean/theme.conf
@@ -1,12 +1,7 @@
 [theme]
-inherit = basic
-stylesheet = style.css
-nosidebar = true
-pygments_style = pygments_style.KoreanStyle
+inherit = subleebase
+pygments_style = subleestyles.KoreanStyle
 
 [options]
-index_logo =
-index_logo_alt =
-index_logo_height = 120px
-github_fork =
-google_analytics =
+opengraph_image = _static/image.png
+github_ribbon = http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png
