--- a/energy/theme.conf
+++ b/energy/theme.conf
@@ -1,12 +1,7 @@
 [theme]
-inherit = basic
-stylesheet = style.css
-nosidebar = true
-pygments_style = pygments_style.EnergyStyle
+inherit = subleebase
+pygments_style = subleestyles.EnergyStyle
 
 [options]
-index_logo =
-index_logo_alt =
-index_logo_height = 120px
-github_fork =
-google_analytics =
+opengraph_image = _static/image.png
+github_ribbon = _static/github.png
