--- a/hangulize/theme.conf
+++ b/hangulize/theme.conf
@@ -1,12 +1,7 @@
 [theme]
-inherit = basic
-stylesheet = style.css
-nosidebar = true
-pygments_style = pygments_style.HangulizeStyle
+inherit = subleebase
+pygments_style = subleestyles.HangulizeStyle
 
 [options]
-index_logo =
-index_logo_alt =
-index_logo_height = 120px
-github_fork =
-google_analytics =
+show_toc = true
+github_ribbon = http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png
