--- a/trueskill/theme.conf
+++ b/trueskill/theme.conf
@@ -1,10 +1,6 @@
 [theme]
-inherit = basic
-stylesheet = style.css
-nosidebar = true
-pygments_style = pygments_style.TrueSkillStyle
+inherit = subleebase
+pygments_style = subleestyles.TrueSkillStyle
 
 [options]
-index_logo_alt =
-github_fork =
-google_analytics =
+github_ribbon = http://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png
