--- a/energy/theme.conf
+++ b/energy/theme.conf
@@ -3,5 +3,6 @@ inherit = subleebase
 pygments_style = subleestyles.EnergyStyle
 
 [options]
+hide_toc = true
 opengraph_image = _static/image.png
 github_ribbon = _static/github.png
