--- a/korean/theme.conf
+++ b/korean/theme.conf
@@ -3,5 +3,6 @@ inherit = subleebase
 pygments_style = subleestyles.KoreanStyle
 
 [options]
+hide_toc = true
 opengraph_image = _static/image.png
 github_ribbon = http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png
