--- a/subleebase/theme.conf
+++ b/subleebase/theme.conf
@@ -4,7 +4,7 @@ stylesheet = style.css
 nosidebar = true
 
 [options]
-show_toc = false
+hide_toc =
 opengraph_image =
 github_fork =
 github_ribbon =
