--- a/trueskill/theme.conf
+++ b/trueskill/theme.conf
@@ -3,4 +3,5 @@ inherit = subleebase
 pygments_style = subleestyles.TrueSkillStyle
 
 [options]
+hide_toc = true
 github_ribbon = http://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png
