make subpixel base style and Pygments style generator make new trueskill style that inherits subpixel

--- a/trueskill/theme.conf
+++ b/trueskill/theme.conf
@@ -1,7 +1,16 @@
 [theme]
-inherit = subleebase
-pygments_style = subleestyles.TrueSkillStyle
+inherit = subpixel
+pygments_style = subpixelstyle.generate(trueskill)
 
 [options]
-hide_toc = true
-github_ribbon = http://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png
+opengraph_image = _static/image.png
+github_ribbon = _static/github.png
+
+logo_height = 95px
+bg_color = #f7eacf
+text_color = #634
+title_color = #a42
+code_color = #a42
+link_color = #47a
+vlink_color = #969
+target_color = #fef5d1
