- fix subpixelstyle error - modify colors of trueskill theme

--- a/trueskill/theme.conf
+++ b/trueskill/theme.conf
@@ -9,8 +9,8 @@ github_ribbon = _static/github.png
 logo_height = 95px
 bg_color = #f7eacf
 text_color = #634
-title_color = #a42
-code_color = #a42
+title_color = #c65
+code_color = #a57
 link_color = #47a
 vlink_color = #969
 target_color = #fef5d1
