- use near characters for subtitle - make energy theme using subpixel

--- a/energy/theme.conf
+++ b/energy/theme.conf
@@ -1,8 +1,16 @@
 [theme]
-inherit = subleebase
-pygments_style = subleestyles.EnergyStyle
+inherit = subpixel
+pygments_style = subpixelstyle.generate(energy)
 
 [options]
-hide_toc = true
 opengraph_image = _static/image.png
 github_ribbon = _static/github.png
+
+logo_height = 80px
+bg_color = #d0e7f0
+text_color = #347
+title_color = #47a
+code_color = #29a
+link_color = #28e
+vlink_color = #87d
+target_color = #dffaf9
