make ranking theme to extend subpixel

--- a/ranking/theme.conf
+++ b/ranking/theme.conf
@@ -1,8 +1,16 @@
 [theme]
-inherit = subleebase
-pygments_style = subleestyles.RankingStyle
+inherit = subpixel
+pygments_style = subpixelstyle.generate(ranking)
 
 [options]
-hide_toc = true
 opengraph_image = _static/image.png
 github_ribbon = _static/github.png
+
+logo_height = 85px
+bg_color = #cdb
+text_color = #532
+title_color = #785
+code_color = #892
+link_color = #489
+vlink_color = #87b
+target_color = #efc
