- subpixelstyle.generate -> subpixel.AutoStyle - modify trueskill theme

--- a/energy/theme.conf
+++ b/energy/theme.conf
@@ -1,6 +1,6 @@
 [theme]
 inherit = subpixel
-pygments_style = subpixelstyle.generate(energy)
+pygments_style = subpixel.AutoStyle(energy)
 
 [options]
 opengraph_image = _static/image.png
