--- a/ranking/theme.conf
+++ b/ranking/theme.conf
@@ -1,6 +1,6 @@
 [theme]
 inherit = subpixel
-pygments_style = subpixelstyle.generate(ranking)
+pygments_style = subpixel.AutoStyle(ranking)
 
 [options]
 opengraph_image = _static/image.png
