--- a/trueskill/theme.conf
+++ b/trueskill/theme.conf
@@ -1,13 +1,13 @@
 [theme]
 inherit = subpixel
-pygments_style = subpixelstyle.generate(trueskill)
+pygments_style = subpixel.AutoStyle(trueskill)
 
 [options]
 opengraph_image = _static/image.png
 github_ribbon = _static/github.png
 
 logo_height = 90px
-bg_color = #f7eacf
+bg_color = #f3e6cd
 text_color = #634
 title_color = #c65
 code_color = #a57
