in subpixel, use AutoStyle instead

--- a/subpixel/theme.conf
+++ b/subpixel/theme.conf
@@ -1,6 +1,6 @@
 [theme]
 inherit = subleebase
-pygments_style = subpixelstyle.generate(subpixel)
+pygments_style = subpixel.AutoStyle(subpixel)
 
 [options]
 hide_toc = true
