change subpixel style

--- a/energy/theme.conf
+++ b/energy/theme.conf
@@ -8,6 +8,7 @@ github_ribbon = _static/github.png
 
 logo_height = 80px
 bg_color = #d0e7f0
+shadow_color = #afd4e7
 text_color = #347
 title_color = #47a
 code_color = #29a
