--- a/ranking/theme.conf
+++ b/ranking/theme.conf
@@ -8,6 +8,7 @@ github_ribbon = _static/github.png
 
 logo_height = 85px
 bg_color = #cdb
+shadow_color = #aca
 text_color = #532
 title_color = #785
 code_color = #892
