--- a/trueskill/theme.conf
+++ b/trueskill/theme.conf
@@ -8,6 +8,7 @@ github_ribbon = _static/github.png
 
 logo_height = 90px
 bg_color = #f3e6cd
+shadow_color = #efcfb2
 text_color = #634
 title_color = #c65
 code_color = #a57
