--- a/subpixel/theme.conf
+++ b/subpixel/theme.conf
@@ -7,6 +7,7 @@ hide_toc = true
 
 logo_height = 90px
 bg_color = #eee
+shadow_color = #ddd
 text_color = #000
 title_color = #000
 code_color = #000
