change bg_color of trueskill theme

--- a/trueskill/theme.conf
+++ b/trueskill/theme.conf
@@ -7,7 +7,7 @@ opengraph_image = _static/image.png
 github_ribbon = _static/github.png
 
 logo_height = 90px
-bg_color = #f3e6cd
+bg_color = #f7eed7
 shadow_color = #efcfb2
 text_color = #634
 title_color = #c65
