change shadow color of trueskill

--- a/trueskill/theme.conf
+++ b/trueskill/theme.conf
@@ -8,7 +8,7 @@ github_ribbon = _static/github.png
 
 logo_height = 90px
 bg_color = #f7eed7
-shadow_color = #efcfb2
+shadow_color = #f0d4bb
 text_color = #634
 title_color = #c65
 code_color = #a57
