change code style of the elo theme

--- a/elo/theme.conf
+++ b/elo/theme.conf
@@ -1,6 +1,6 @@
 [theme]
 inherit = subpixel
-pygments_style = subpixel.AutoStyle(trueskill)
+pygments_style = subpixel.AutoStyle(elo)
 
 [options]
 #opengraph_image = _static/image.png
