--- a/elo/theme.conf
+++ b/elo/theme.conf
@@ -8,7 +8,7 @@ github_ribbon = _static/github.png
 
 logo_height = 90px
 bg_color = #f0d0c9
-shadow_color = #e7aba1
+shadow_color = #eab9b5
 text_color = #523
 title_color = #b45
 code_color = #a57
